--- a/OrangeDot6_files/visuals/visuals.Rmd
+++ b/OrangeDot6_files/visuals/visuals.Rmd
@@ -5,7 +5,7 @@ output: html_document
 ---
 ```{css, echo=FALSE}
 .main-container.container-fluid {
-max-width: 1200px;
+  max-width: none;
   margin-left: auto;
   margin-right: auto;
   padding: 0 4.167%;
@@ -18,6 +18,7 @@ knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 
 # Load packages ----
 library(tidyverse)
+library(tidycensus)
 library(scales)
 library(RColorBrewer)
 library(ggspatial)
@@ -34,9 +35,18 @@ library(patchwork)
 county_codes <- c("003", "540", "065", "079", "109", "125", "029")
 tract_geo <- tracts(state = "VA", county = county_codes)
 
+# Map palettes ----
+pal_inc <- carto_pal(7, "Geyser")
+# "#008080" "#70A494" "#B4C8A8" "#F6EDBD" "#EDBB8A" "#DE8A5A" "#CA562C"
+# pal_inc <- c("#EE6400","#F37903","#F78C05","#FCA108","#E7AD1B","#ABB046","#6FB272","#33B59D","#2DB0AC","#4CA7A9")
+
+pal_ssw <- carto_pal(7, "RedOr")
+# "#F6D2A9" "#F5B78E" "#F19C7C" "#EA8171" "#DD686C" "#CA5268" "#B13F64"
+# pal_ssw <- c("#F6D2A9", "#F5B78E", "#F19C7C", "#EA8171", "#DD686C")
+
 ```
 
-```{r, echo = FALSE,fig.width=12, fig.height=9}
+```{r, echo = FALSE,fig.width=10, fig.height=13}
 # Families with income below povery, below self sufficiency wage & above ssw ----
 fam_pov_ssw <- read_csv("../data/fam_pov_ssw_race_county_2022.csv")
 
@@ -45,8 +55,8 @@ fam_pov_ssw_dat <- fam_pov_ssw %>%
   pivot_wider(names_from = ssw_group, values_from = percent) %>% 
   mutate(below_ssw = below - poverty) %>% 
   pivot_longer(above:below_ssw) %>% 
-  filter(name != "below")
-
+  filter(name != "below") %>% 
+  mutate(number = round(total_families*(value/100), 0))
 
 fam_pov_ssw_dat <- fam_pov_ssw_dat[order(fam_pov_ssw_dat$name),]
 
@@ -55,18 +65,19 @@ fam_pov_ssw_dat %>%
   mutate(group = factor(group,
                        levels = c("Black", "Hispanic", "White, Not Hispanic", "All Families"),
                        labels = c("Black", "Hispanic", "White", "All Families")),
-  text = case_when(value >= 1 ~ paste0(round(value, 0), "%"),
-                   value < 1 ~ paste0(round(value, 1), "%"))) %>%
+  text = case_when(value >= 20 ~ paste0(round(value, 0), "%\n(", prettyNum(number, big.mark=",", preserve.width="none"), ")"),
+                   value < 20 & value >= 1 ~ paste0(round(value, 0), "% (", prettyNum(number, big.mark=",", preserve.width="none"), ")"),
+                   value < 1 ~ "")) %>%
   ggplot(aes(x = group, y = value, group = group, fill = name, 
              label = text)) +
   geom_bar(stat = "identity", color = "white") + 
-  geom_text(size = 3, position = position_stack(vjust = 0.5)) +
+  geom_text(size = 3, position = position_stack(vjust = 0.5), lineheight = 1) +
   scale_fill_manual(values = c("#b2b8be", "#3B8EA5", "#97E196")) +
   scale_x_discrete(name = "") +
   scale_y_continuous(labels = label_percent(scale = 1),
                      name = "") +
   guides(fill = guide_legend(reverse = TRUE)) +
-  facet_wrap(~locality, scales = "free") +
+  facet_wrap(~locality, scales = "free", ncol = 2) +
   theme_minimal() +
   theme(legend.title=element_blank(),
         legend.position = "top",
@@ -77,7 +88,64 @@ fam_pov_ssw_dat %>%
         plot.caption.position = "plot")
 ```
 
-```{r, echo=FALSE, warning = FALSE, message = FALSE, fig.width=12, fig.height=10}
+```{r, echo=FALSE,fig.width=10, fig.height=14}
+# Income distribution by race/ethnicity by county ----
+faminc_all <- read_csv("../data/faminc_county_2022.csv")
+faminc_race <- read_csv("../data/faminc_race_county_2022.csv") 
+
+faminc <- faminc_all %>% 
+  rbind(faminc_race) %>% 
+  filter(label != "Total Families") %>% 
+  mutate(inc_group = case_when(str_detect(variable, "_002|_003|_004|_005|_006|_007") ~ "Earning below $35K",
+                               str_detect(variable, "_008|_009|_010|_011") ~ "Earning $35K-$59.9K",
+                               str_detect(variable, "_012|_013") ~ "Earning $60K-$100K",
+                               str_detect(variable, "_014|_015|_016|_017") ~ "Earning above $100K"),
+         inc_rank = case_when(str_detect(variable, "_002|_003|_004|_005|_006|_007") ~ 1,
+                               str_detect(variable, "_008|_009|_010|_011") ~ 2,
+                               str_detect(variable, "_012|_013") ~ 3,
+                               str_detect(variable, "_014|_015|_016|_017") ~ 4))
+
+faminc_data <- faminc %>% 
+  group_by(GEOID, locality, year, group, inc_group, inc_rank) %>% 
+  summarise(estimate = sum(estimate),
+            moe = moe_sum(moe = moe, estimate = estimate),
+            total_families = first(total_families)) %>% 
+  ungroup() %>% 
+  mutate(percent = estimate/total_families *100)
+
+faminc_data %>% 
+  arrange(inc_rank) %>%
+    mutate(group = factor(group,
+                         levels = c("Black", "Hispanic", "White, Not Hispanic", "All Families"),
+                         labels = c("Black", "Hispanic", "White", "All Families")),
+           inc_group = factor(inc_group,
+                              levels = c("Earning above $100K",  "Earning $60K-$100K", "Earning $35K-$59.9K", "Earning below $35K")),
+    text = case_when(percent >= 1 ~ paste0(round(percent, 0), "%\n(", prettyNum(estimate, big.mark=",", preserve.width="none"), ")"),
+                     percent < 1 ~ "")) %>%
+    ggplot(aes(x = group, y = percent, group = group, fill = inc_group, 
+               label = text)) +
+    geom_bar(stat = "identity", color = "white") + 
+    geom_text(size = 3, position = position_stack(vjust = 0.5)) +
+    scale_fill_manual(values = c("#E4EAF1", "#B4C8A8", "#DE8A5A", "#CA562C")) +
+    scale_x_discrete(name = "") +
+    scale_y_continuous(labels = label_percent(scale = 1),
+                       name = "") +
+    guides(fill = guide_legend(reverse = TRUE)) +
+  coord_flip() + 
+    facet_wrap(~locality, scales = "free", ncol = 2) +
+    theme_minimal() +
+    theme(legend.title=element_blank(),
+          legend.position = "top",
+          panel.grid.major.x = element_blank(),
+          axis.ticks = element_blank(),
+          panel.grid.minor = element_blank(),
+          plot.title.position= "plot",
+          plot.caption.position = "plot")
+
+```
+
+
+```{r, echo=FALSE, warning = FALSE, message = FALSE, fig.width=12, fig.height=6}
 # Median family income by tract ----
 med_faminc_tract <- read_csv("../data/med_faminc_tract_2022.csv") %>%
   mutate(GEOID = as.character(GEOID),
@@ -102,16 +170,6 @@ ssw_tract <- ssw_tract %>%
 
 min_ssw <- min(ssw_tract$percent, na.rm = TRUE)
 max_ssw <- max(ssw_tract$percent, na.rm = TRUE)
-
-# Map palettes ----
-pal_inc <- carto_pal(7, "Geyser")
-# "#008080" "#70A494" "#B4C8A8" "#F6EDBD" "#EDBB8A" "#DE8A5A" "#CA562C"
-# pal_inc <- c("#EE6400","#F37903","#F78C05","#FCA108","#E7AD1B","#ABB046","#6FB272","#33B59D","#2DB0AC","#4CA7A9")
-
-pal_ssw <- carto_pal(7, "RedOr")
-# "#F6D2A9" "#F5B78E" "#F19C7C" "#EA8171" "#DD686C" "#CA5268" "#B13F64"
-# pal_ssw <- c("#F6D2A9", "#F5B78E", "#F19C7C", "#EA8171", "#DD686C")
-
 
 # Geospatial visualization: Albemarle ----
 alb_inc_map <- med_faminc_tract %>%
@@ -171,7 +229,7 @@ alb_ssw_map <- ssw_tract %>%
 alb_inc_map + alb_ssw_map
 ```
 
-```{r, echo=FALSE, warning = FALSE, message = FALSE, fig.width=12, fig.height=10}
+```{r, echo=FALSE, warning = FALSE, message = FALSE, fig.width=12, fig.height=6}
 # Geospatial visualization: Buckingham ----
 buc_inc_map <- med_faminc_tract %>%
   filter(locality == "Buckingham County") %>%
@@ -230,7 +288,7 @@ buc_ssw_map <- ssw_tract %>%
 buc_inc_map + buc_ssw_map
 ```
 
-```{r, echo=FALSE, warning = FALSE, message = FALSE, fig.width=12, fig.height=10}
+```{r, echo=FALSE, warning = FALSE, message = FALSE, fig.width=12, fig.height=6}
 
 # Geospatial visualization: Charlottesville ----
 cville_inc_map <- med_faminc_tract %>%
@@ -292,7 +350,7 @@ cville_ssw_map <- ssw_tract %>%
 cville_inc_map + cville_ssw_map
 ```
 
-```{r, echo=FALSE, warning = FALSE, message = FALSE, fig.width=12, fig.height=10}
+```{r, echo=FALSE, warning = FALSE, message = FALSE, fig.width=12, fig.height=6}
 # Geospatial visualization: Fluvanna County ----
 fluv_inc_map <- med_faminc_tract %>%
   filter(locality == "Fluvanna County") %>%
@@ -350,7 +408,7 @@ fluv_ssw_map <- ssw_tract %>%
 fluv_inc_map + fluv_ssw_map
 ```
 
-```{r, echo=FALSE, warning = FALSE, message = FALSE, fig.width=12, fig.height=10}
+```{r, echo=FALSE, warning = FALSE, message = FALSE, fig.width=12, fig.height=6}
 # Geospatial visualization: Greene County ----
 greene_inc_map <- med_faminc_tract %>%
   filter(locality == "Greene County") %>%
@@ -409,7 +467,7 @@ greene_ssw_map <- ssw_tract %>%
 greene_inc_map + greene_ssw_map
 ```
 
-```{r, echo=FALSE, warning = FALSE, message = FALSE, fig.width=12, fig.height=10}
+```{r, echo=FALSE, warning = FALSE, message = FALSE, fig.width=12, fig.height=6}
 # Geospatial visualization: Louisa County ----
 louisa_inc_map <- med_faminc_tract %>%
   filter(locality == "Louisa County") %>%
@@ -468,7 +526,7 @@ louisa_ssw_map <- ssw_tract %>%
 louisa_inc_map + louisa_ssw_map
 ```
 
-```{r, echo=FALSE, warning = FALSE, message = FALSE, fig.width=12, fig.height=10}
+```{r, echo=FALSE, warning = FALSE, message = FALSE, fig.width=12, fig.height=6}
 # Geospatial visualization: Nelson County ----
 nels_inc_map <- med_faminc_tract %>%
   filter(locality == "Nelson County") %>%
